# my_tele_bot

./: .gitignore  pyproject.toml
tele_bot/: example.py  main.py
